--- a/Configuration/config.json
+++ b/Configuration/config.json
@@ -2,5 +2,5 @@
     "version": "Alpha 1.7",
     "branch": "master",
     "prefix": "!",
-    "creatorID": ""
+    "creatorID": "829749556916387890"
 }
